--- a/MO1.vcxproj
+++ b/MO1.vcxproj
@@ -130,6 +130,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="BaseScreen.cpp" />
+    <ClCompile Include="FlatMemoryAllocator.cpp" />
     <ClCompile Include="ICommand.cpp" />
     <ClCompile Include="MO1.cpp" />
     <ClCompile Include="PrintCommand.cpp" />
@@ -138,7 +139,9 @@
   <ItemGroup>
     <ClInclude Include="BaseScreen.h" />
     <ClInclude Include="Console.h" />
+    <ClInclude Include="FlatMemoryAllocator.h" />
     <ClInclude Include="ICommand.h" />
+    <ClInclude Include="IMemoryAllocator.h" />
     <ClInclude Include="PrintCommand.h" />
     <ClInclude Include="Process.h" />
   </ItemGroup>
